Added ServiceLayer build task to copy SqlPackage executables

--- a/nuget.config
+++ b/nuget.config
@@ -5,5 +5,7 @@
     <add key="Nuget Preview" value="https://dotnet.myget.org/F/dotnet-core/api/v3/index.json" />
     <add key="Nuget" value="https://www.nuget.org/api/v2" />
     <add key="DataTools Nuget" value="./bin/nuget" />
+    <!-- zijchen Testing: Replace path to load nupkgs from local -->
+    <!-- <add key="Local" value="C:\Users\zijchen.REDMOND\Downloads\Nugets" /> -->
   </packageSources>
 </configuration>
