--- a/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
+++ b/src/Microsoft.SqlTools.ServiceLayer/Microsoft.SqlTools.ServiceLayer.csproj
@@ -52,6 +52,17 @@
 		<None Include="Localization\sr.strings" />
 	</ItemGroup>
 	<ItemGroup>
+		<Content Include="$(PkgMicrosoft_SqlServer_DacFx)\tools\netstandard2.0\win7-x64\**" Condition=" '$(OS)' == 'Windows_NT' ">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="$(PkgMicrosoft_SqlServer_DacFx)\tools\netstandard2.0\linux-x64\**" Condition=" '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Linux)))' ">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="$(PkgMicrosoft_SqlServer_DacFx)\tools\netstandard2.0\osx-x64\**" Condition=" '$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::OSX)))' ">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
 		<EmbeddedResource Include=".\Agent\NotebookResources\NotebookJobScript.ps1" />
 	</ItemGroup>
 	<!-- this target enables dependency files to be copied as part of the output of ProjectReference.
